Language implementation (API and UI)

--- a/WeatherAppPage/fr.lproj/Localizable.strings
+++ b/WeatherAppPage/fr.lproj/Localizable.strings
@@ -6,4 +6,5 @@
   Copyright © 2016 Peter Gartner. All rights reserved.
 */
 
-"Pull to refresh" = "Tirez pour rafraichir"
+"Pull to refresh" = "Tirez pour rafraichir";
+"Forecast" = "Prévisions";
