Implemented the view next hour

--- a/WeatherAppPage/en.lproj/Localizable.strings
+++ b/WeatherAppPage/en.lproj/Localizable.strings
@@ -8,4 +8,7 @@
 
 
 "Pull to refresh" = "Pull to refresh";
-"Forecast" = "Forecast";
+"Forecast 7 days" = "Forecast 7 days";
+"next 12 hours" = "next 12 hours";
+"next 24 hours" = "next 24 hours";
+"next 36 hours" = "next 36 hours";
